Avance en resposive de Información y Noticias, algunas animaciones y sombras y agregado de SEO

--- a/pages/informacion.html
+++ b/pages/informacion.html
@@ -4,13 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Explorá el mundo del veganismo en nuestro sitio web dedicado a la vida vegana. Descubre información esencial, productos deliciosos y saludables, encuentra lugares veganos para disfrutar de deliciosas comidas y mantente actualizado con las últimas noticias sobre el veganismo.">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
-    <title>Información</title>
+    <title>Pagina vegana | Información sobre la alimentación basada en plantas</title>
 </head>
 
 <body>
@@ -50,75 +52,66 @@
 
     <main>
         <h2 class="titulo__pagina">Información vegana</h2>
-        <section>
-
-            <iframe width="560" height="315"
-                src="https://www.youtube.com/embed/MaorpnopNA4?si=neK5yL1Ps43NNnaX&amp;start=16"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
-
-            <h2>Qué es ser vegano?</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat rerum minima quas adipisci animi dolores
+        <section class="informacion1">
+            <h2 class="informacion__titulo">Qué es ser vegano?</h2>
+            <p class="informacion__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat rerum minima quas adipisci animi dolores
                 voluptates aliquid, architecto suscipit earum error? Omnis optio vero officia ea corrupti. Vitae,
                 praesentium facilis.</p>
         </section>
 
-        <section>
-            <h2>Algunas preguntas frecuentes</h2>
-            <article>
-                <h3>Debo suplementarme?</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus nesciunt deleniti et,
+        <h3>Algunas preguntas frecuentes</h3>
+        <section class="informacion">
+            <article class="informacion__card">
+                <h4 class="informacion__titulo">Debo suplementarme?</h4>
+                <p class="informacion__texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus nesciunt deleniti et,
                     consectetur non culpa deserunt, impedit quam delectus, aliquid temporibus suscipit sed ipsum optio
                     vel cum nulla quis pariatur?</p>
             </article>
-            <article>
-                <h3>Qué son las trazas?</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus nesciunt deleniti et,
+            <article class="informacion__card">
+                <h4 class="informacion__titulo">Qué son las trazas?</h4>
+                <p class="informacion__texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus nesciunt deleniti et,
                     consectetur non culpa deserunt, impedit quam delectus, aliquid temporibus suscipit sed ipsum optio
                     vel cum nulla quis pariatur?</p>
             </article>
-            <article>
-                <h3>Y ahora? De donde saco el calcio?</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus nesciunt deleniti et,
+            <article class="informacion__card">
+                <h4 class="informacion__titulo">Y ahora? De donde saco el calcio?</h4>
+                <p class="informacion__texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus nesciunt deleniti et,
                     consectetur non culpa deserunt, impedit quam delectus, aliquid temporibus suscipit sed ipsum optio
                     vel cum nulla quis pariatur?</p>
             </article>
-            <article>
-                <h3>Dieta vegana = 0 colesterol</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus nesciunt deleniti et,
+            <article class="informacion__card">
+                <h4 class="informacion__titulo">Dieta vegana = 0 colesterol</h4>
+                <p class="informacion__texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus nesciunt deleniti et,
                     consectetur non culpa deserunt, impedit quam delectus, aliquid temporibus suscipit sed ipsum optio
                     vel cum nulla quis pariatur?</p>
             </article>
         </section>
 
-        <hr>
-
-        <section>
-            <h2>Creadores de recetas veganas</h2>
-            <article>
-                <img src="../imagenes/Imagen.png" alt="">
-                <h3>Soyvelen</h3>
-                <h4>@soyvelen</h4>
+        <h3>Creadores de recetas veganas</h3>       
+        <section class="creadores">
+            <article class="creadores__card">
+                <img class="creadores__img" src="../imagenes/Imagen.png" alt="">
+                <h4 class="creadores__titulo">Soyvelen</h4>
+                <a class="creadores__link" href="https://www.instagram.com/soyvelen/?hl=es">@Soyvelen</a>
             </article>
-            <article>
-                <img src="../imagenes/Imagen.png" alt="">
-                <h3>Nutriloca</h3>
-                <h4>@nutriloca</h4>
+            <article class="creadores__card">
+                <img class="creadores__img" src="../imagenes/Imagen.png" alt="">
+                <h4 class="creadores__titulo">Nutriloca</h4>
+                <a class="creadores__link" href="https://www.instagram.com/nutriloca/?hl=es">@Nutriloca</a>
             </article>
-            <article>
-                <img src="../imagenes/Imagen.png" alt="">
-                <h3>Milagros</h3>
-                <h4>@midiariovegan</h4>
+            <article class="creadores__card">
+                <img class="creadores__img" src="../imagenes/Imagen.png" alt="">
+                <h4 class="creadores__titulo">Milagros</h4>
+                <a class="creadores__link" href="https://www.instagram.com/midiariovegan/?hl=es-la">@midiariovegan</a>
             </article>
-            <article>
-                <img src="../imagenes/Imagen.png" alt="">
-                <h3>Veganaarg</h3>
-                <h4>@veganaarg</h4>
+            <article class="creadores__card">
+                <img class="creadores__img" src="../imagenes/Imagen.png" alt="">
+                <h4 class="creadores__titulo">Veganaarg</h4>
+                <a class="creadores__link" href="https://www.instagram.com/vegana.arg/?hl=es">@vegana.arg</a>
             </article>
         </section>
-        <section>
-            <h2>Activistas veganos</h2>
+        <section class="activistas">
+            <h3>Activistas veganos</h3>
             <article>
                 <img src="../imagenes/Imagen.png" alt="">
                 <h3>Soledad Barruti</h3>
@@ -141,7 +134,7 @@
             </article>
         </section>
 
-        <section>
+        <section class="documentales">
             <h2>Documentales y videos recomendados</h2>
             <article>
                 <img src="../imagenes/Imagen.png" alt="">
@@ -169,12 +162,12 @@
                 <h4>Pagina vegana</h4>
                 <ul>
                     <li>
-                        <div class="navegador"><a href="index.html">Inicio</a></div>
+                        <div class="navegador"><a href="../index.html">Inicio</a></div>
                     </li>
-                    <li><a class="footer__link" href="./pages/informacion.html">Información</a></li>
-                    <li><a class="footer__link" href="./pages/productos.html">Productos</a></li>
-                    <li><a class="footer__link" href="./pages/lugares.html">Lugares</a></li>
-                    <li><a class="footer__link" href="./pages/noticias.html">Noticias</a></li>
+                    <li><a class="footer__link" href="./informacion.html">Información</a></li>
+                    <li><a class="footer__link" href="./productos.html">Productos</a></li>
+                    <li><a class="footer__link" href="./lugares.html">Lugares</a></li>
+                    <li><a class="footer__link" href="./noticias.html">Noticias</a></li>
                 </ul>
             </div>
 
