--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Explorá el mundo del veganismo en nuestro sitio web dedicado a la vida vegana. Descubre información esencial, productos deliciosos y saludables, encuentra lugares veganos para disfrutar de deliciosas comidas y mantente actualizado con las últimas noticias sobre el veganismo.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
-    <title>Noticias</title>
+    <title>Pagina vegana | Últimas noticias acerca del veganismo</title>
 </head>
 
 <body>
@@ -56,122 +57,79 @@
             <h3 class="subtitulo__pagina">Ultimas noticias</h3>
             <div class="noticias">
                 <div class="noticias__tarjeta">
-                    <img class="noticias__img" src="../imagenes/noticia.webp" alt="Billie Eilish lanza zapatillas">
+                    <img class="noticias__img" src="../imagenes/noticia.jpg" alt="Billie Eilish lanza zapatillas">
                     <h4>Billie Eilish lanza unas zapatillas con Nike </h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet quam culpa quaerat quidem vel?
-                        Quo,
-                        illum necessitatibus exercitationem explicabo rerum quam architecto adipisci natus quidem error,
-                        sint consectetur dolorem impedit!</p>
+                    <p>La cantante firmó un contrato con la marca Nike para lanzar unas zapatillas inspiradas en ella. Son las Air Jordan 1 KO edición limitada, un calzado con superficie plana, caña media-alta y un color verde fosforescente similar a los tonos utilizados por la cantante en la época de su disco “When we all fall asleep, where do we go?”.</p>
                 </div>
                 <div class="noticias__tarjeta">
-                    <img class="noticias__img" src="../imagenes/kitkat.webp" alt="Última noticia 2">
-                    <h4>Noticia 2</h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet quam culpa quaerat quidem vel?
-                        Quo,
-                        illum necessitatibus exercitationem explicabo rerum quam architecto adipisci natus quidem error,
-                        sint consectetur dolorem impedit!</p>
+                    <img class="noticias__img" src="../imagenes/kitkat.jpg" alt="Última noticia 2">
+                    <h4>Nestlé lanza barra de KitKat vegana</h4>
+                    <p>El anuncio de la llegada de una nuevo chocolate vegano por parte de Nestlése hizo eco durante 2021, pero ahora, finalmente se ha hecho realidad. Ya puedes comprar los KitKat V, la opción vegana de las míticas barritas de chocolate. </p>
                 </div>
                 <div class="noticias__tarjeta">
                     <img class="noticias__img" src="../imagenes/chia.jpg" alt="Última noticia 3">
-                    <h4>Noticia 3</h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet quam culpa quaerat quidem vel?
-                        Quo,
-                        illum necessitatibus exercitationem explicabo rerum quam architecto adipisci natus quidem error,
-                        sint consectetur dolorem impedit!</p>
+                    <h4>Restaurante vegano del Cusco es elegido como el mejor del mundo por TripAdvisor</h4>
+                    <p>Chia Vegan Kitchen, un restaurante vegano ubicado en Cusco, ha sido catalogado como el mejor del mundo por los premios ‘Travellers Choice Best of the Best’ de TripAdvisor, el sitio estadounidense que proporciona reseñas de contenido relacionado con viaje.</p>
                 </div>
             </div>
         </section>
-
-        <!-- Sección carretel de noticias del veganismo en Argentina -->
 
 
         <section>
             <h3 class="subtitulo__pagina">Argentina</h3>
-            <div class="carousel__contenedor">
-                <div class="carousel__tarjeta">
-                    <img src="../imagenes/imagen.png" alt="Noticia">
-                    <h4>Noticia 1</h4>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias delectus, temporibus mollitia
+            <div class="noticias2">
+                <div class="noticias2__tarjeta">
+                    <img class="noticias2__img" src="../imagenes/imagen.png" alt="Noticia">
+                    <h4 class="noticias2__titulo">Noticia 1</h4>
+                    <p class="noticias2__texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias delectus, temporibus mollitia
                         ducimus assumenda at deleniti fugit voluptatibus aspernatur quasi quidem, illum iusto quos
                         doloremque, iure eum incidunt sequi a.</p>
                 </div>
-                <div class="carousel__tarjeta">
-                    <img src="../imagenes/imagen.png" alt="Noticia">
-                    <h4>Noticia 2</h4>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias delectus, temporibus mollitia
+                <div class="noticias2__tarjeta">
+                    <img class="noticias2__img" src="../imagenes/imagen.png" alt="Noticia">
+                    <h4 class="noticias2__titulo">Noticia 1</h4>
+                    <p class="noticias2__texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias delectus, temporibus mollitia
                         ducimus assumenda at deleniti fugit voluptatibus aspernatur quasi quidem, illum iusto quos
                         doloremque, iure eum incidunt sequi a.</p>
                 </div>
-                <div class="carousel__tarjeta">
-                    <img src="../imagenes/imagen.png" alt="Noticia">
-                    <h4>Noticia 3</h4>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias delectus, temporibus mollitia
+                <div class="noticias2__tarjeta">
+                    <img class="noticias2__img" src="../imagenes/imagen.png" alt="Noticia">
+                    <h4 class="noticias2__titulo">Noticia 1</h4>
+                    <p class="noticias2__texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias delectus, temporibus mollitia
                         ducimus assumenda at deleniti fugit voluptatibus aspernatur quasi quidem, illum iusto quos
                         doloremque, iure eum incidunt sequi a.</p>
                 </div>
             </div>
         </section>
 
-        <!-- Sección carretel de noticias del veganismo en el mundo -->
 
 
         <section>
             <h3 class="subtitulo__pagina">Del mundo</h3>
-            <div class="carousel__contenedor">
-                <div class="carousel__tarjeta">
-                    <img src="../imagenes/imagen.png" alt="Noticia">
-                    <h4>Noticia 1</h4>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias delectus, temporibus mollitia
+            <div class="noticias2">
+                <div class="noticias2__tarjeta">
+                    <img class="noticias2__img" src="../imagenes/imagen.png" alt="Noticia">
+                    <h4 class="noticias2__titulo">Noticia 1</h4>
+                    <p class="noticias2__texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias delectus, temporibus mollitia
                         ducimus assumenda at deleniti fugit voluptatibus aspernatur quasi quidem, illum iusto quos
                         doloremque, iure eum incidunt sequi a.</p>
                 </div>
-                <div class="carousel__tarjeta">
-                    <img src="../imagenes/imagen.png" alt="Noticia">
-                    <h4>Noticia 2</h4>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias delectus, temporibus mollitia
+                <div class="noticias2__tarjeta">
+                    <img class="noticias2__img" src="../imagenes/imagen.png" alt="Noticia">
+                    <h4 class="noticias2__titulo">Noticia 1</h4>
+                    <p class="noticias2__texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias delectus, temporibus mollitia
                         ducimus assumenda at deleniti fugit voluptatibus aspernatur quasi quidem, illum iusto quos
                         doloremque, iure eum incidunt sequi a.</p>
                 </div>
-                <div class="carousel__tarjeta">
-                    <img src="../imagenes/imagen.png" alt="Noticia">
-                    <h4>Noticia 3</h4>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias delectus, temporibus mollitia
+                <div class="noticias2__tarjeta">
+                    <img class="noticias2__img" src="../imagenes/imagen.png" alt="Noticia">
+                    <h4 class="noticias2__titulo">Noticia 1</h4>
+                    <p class="noticias2__texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias delectus, temporibus mollitia
                         ducimus assumenda at deleniti fugit voluptatibus aspernatur quasi quidem, illum iusto quos
                         doloremque, iure eum incidunt sequi a.</p>
                 </div>
             </div>
 
-            <section>
-                <h3 class="subtitulo__pagina">Celebridades</h3>
-                <div class="carousel__contenedor">
-                    <div class="carousel__tarjeta  tarjeta__mediana">
-                        <img src="../imagenes/imagen.png" alt="Noticia">
-                        <h4>Noticia 1</h4>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias delectus, temporibus
-                            mollitia
-                            ducimus assumenda at deleniti fugit voluptatibus aspernatur quasi quidem, illum iusto
-                            quos
-                            doloremque, iure eum incidunt sequi a.</p>
-                    </div>
-                    <div class="carousel__tarjeta"> <img src="../imagenes/imagen.png" alt="Noticia">
-                        <h4>Noticia 2</h4>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias delectus, temporibus
-                            mollitia
-                            ducimus assumenda at deleniti fugit voluptatibus aspernatur quasi quidem, illum iusto
-                            quos
-                            doloremque, iure eum incidunt sequi a.</p>
-                    </div>
-                    <div class="carousel__tarjeta">
-                        <img src="../imagenes/imagen.png" alt="Noticia">
-                        <h4>Noticia 3</h4>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias delectus, temporibus
-                            mollitia
-                            ducimus assumenda at deleniti fugit voluptatibus aspernatur quasi quidem, illum iusto
-                            quos
-                            doloremque, iure eum incidunt sequi a.</p>
-                    </div>
-                </div>
-            </section>
 
     </main>
 
@@ -181,12 +139,12 @@
                 <h4>Pagina vegana</h4>
                 <ul>
                     <li>
-                        <div class="navegador"><a href="index.html">Inicio</a></div>
+                        <div class="navegador"><a href="../index.html">Inicio</a></div>
                     </li>
-                    <li><a class="footer__link" href="./pages/informacion.html">Información</a></li>
-                    <li><a class="footer__link" href="./pages/productos.html">Productos</a></li>
-                    <li><a class="footer__link" href="./pages/lugares.html">Lugares</a></li>
-                    <li><a class="footer__link" href="./pages/noticias.html">Noticias</a></li>
+                    <li><a class="footer__link" href="./informacion.html">Información</a></li>
+                    <li><a class="footer__link" href="./productos.html">Productos</a></li>
+                    <li><a class="footer__link" href="./lugares.html">Lugares</a></li>
+                    <li><a class="footer__link" href="./noticias.html">Noticias</a></li>
                 </ul>
             </div>
 
