--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Explorá el mundo del veganismo en nuestro sitio web dedicado a la vida vegana. Descubre información esencial, productos deliciosos y saludables, encuentra lugares veganos para disfrutar de deliciosas comidas y mantente actualizado con las últimas noticias sobre el veganismo.">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
-    <title>Página vegana</title>
+    <title>Pagina vegana | Donde encontrarás toda la información para ser vegano</title>
 </head>
 
 
@@ -55,18 +58,25 @@
 
         <div class="contenedor__inicio">
             <div class="inicio">
-                <div class="inicio__img"><img src=" ./imagenes/vaca-tomando-leche.jpg" alt="Ternero tomando leche"></div>
+                <div class="inicio__img"><img src=" ./imagenes/vaca-tomando-leche.jpg" alt="Ternero tomando leche">
+                </div>
                 <div>
                     <h3>Que ofrece Pagina Vegana?</h3>
-                    <p>Este sitio web va a ser el gran aliado de la persona vegana o de familia y amigos que quieran entender este hermoso mundo de empatía. Aca vas a poder encontrar información sobre el veganismo, noticias, productos veganos de todo tipo y lugares donde encontrar comida rica para comer.
+                    <p>Este sitio web va a ser el gran aliado de la persona vegana o de familia y amigos que quieran
+                        entender este hermoso mundo de empatía. Aca vas a poder encontrar información sobre el
+                        veganismo, noticias, productos veganos de todo tipo y lugares donde encontrar comida rica para
+                        comer.
                     </p>
                 </div>
             </div>
             <div class="inicio">
-                <div class="inicio__img"><img src=" ./imagenes/vaca-tomando-leche.jpg" alt="Ternero tomando leche"></div>
+                <div class="inicio__img"><img src=" ./imagenes/vaca-tomando-leche.jpg" alt="Ternero tomando leche">
+                </div>
                 <div>
                     <h3 class="inicio_titulo">¿Por qué veganismo?</h3>
-                    <p class="inicio_texto">El veganismo es una filosofía y forma de vida que busca excluir, en la medida de lo posible y practicable, todas las formas de explotación y crueldad hacia los animales, incluyendo su uso para la comida, ropa, o cualquier otro propósito.
+                    <p class="inicio_texto">El veganismo es una filosofía y forma de vida que busca excluir, en la
+                        medida de lo posible y practicable, todas las formas de explotación y crueldad hacia los
+                        animales, incluyendo su uso para la comida, ropa, o cualquier otro propósito.
                     </p>
                 </div>
             </div>
@@ -74,7 +84,9 @@
                 <div class="inicio__img"><img src="./imagenes/oreo.jpg" alt="Oreos clásicas"></div>
                 <div>
                     <h3 class="inicio_titulo">Oreos veganas</h3>
-                    <p class="inicio_texto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, sint? Sequi ipsa cum natus. Obcaecati, deleniti, sint neque recusandae facilis blanditiis earum molestiae veniam nemo eveniet maxime in, quia aperiam.
+                    <p class="inicio_texto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, sint?
+                        Sequi ipsa cum natus. Obcaecati, deleniti, sint neque recusandae facilis blanditiis earum
+                        molestiae veniam nemo eveniet maxime in, quia aperiam.
                     </p>
                 </div>
             </div>
@@ -82,7 +94,10 @@
                 <div class="inicio__img"><img src="./imagenes/ladov.jpeg" alt="Foto del restaurant"></div>
                 <div>
                     <h3 class="inicio_titulo">Restaurant recomedado</h3>
-                    <p class="inicio_texto">Este restaurant está ubicado en la ciudad de Buenos Aires, en el barrio de Palermo, calle Honduras 4969. Se caracteriza por ser un lugar muy instagrameable, con hermosos lugares para sacarse altas fotos. La comida es estilo "Street Food" y tiene una barra de tragos espectacular.
+                    <p class="inicio_texto">Este restaurant está ubicado en la ciudad de Buenos Aires, en el barrio de
+                        Palermo, calle Honduras 4969. Se caracteriza por ser un lugar muy instagrameable, con hermosos
+                        lugares para sacarse altas fotos. La comida es estilo "Street Food" y tiene una barra de tragos
+                        espectacular.
                     </p>
                 </div>
             </div>
@@ -141,7 +156,10 @@
         </div>
     </footer>
 
-
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
