--- a/pages/productos.html
+++ b/pages/productos.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Explorá el mundo del veganismo en nuestro sitio web dedicado a la vida vegana. Descubre información esencial, productos deliciosos y saludables, encuentra lugares veganos para disfrutar de deliciosas comidas y mantente actualizado con las últimas noticias sobre el veganismo.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
-    <title>Productos</title>
+    <title>Pagina vegana | Variedad de productos veganos fáciles de encotrar</title>
 </head>
 
 <body>
@@ -223,12 +224,12 @@
                 <h4>Pagina vegana</h4>
                 <ul>
                     <li>
-                        <div class="navegador"><a href="index.html">Inicio</a></div>
+                        <div class="navegador"><a href="../index.html">Inicio</a></div>
                     </li>
-                    <li><a class="footer__link" href="./pages/informacion.html">Información</a></li>
-                    <li><a class="footer__link" href="./pages/productos.html">Productos</a></li>
-                    <li><a class="footer__link" href="./pages/lugares.html">Lugares</a></li>
-                    <li><a class="footer__link" href="./pages/noticias.html">Noticias</a></li>
+                    <li><a class="footer__link" href="./informacion.html">Información</a></li>
+                    <li><a class="footer__link" href="./productos.html">Productos</a></li>
+                    <li><a class="footer__link" href="./lugares.html">Lugares</a></li>
+                    <li><a class="footer__link" href="./noticias.html">Noticias</a></li>
                 </ul>
             </div>
 
